# XSocialLedger

./: .gitignore  CMakeLists.txt  build.bat
src/: main.cpp
src/App/: WebView2App.cpp  WebView2App.h  WebView2Handler.cpp  WebView2Handler.h
src/Core/: ListMonitorEngine.cpp  ListMonitorEngine.h  NotificationCollector.cpp  NotificationCollector.h  ReciprocatorEngine.cpp  ReciprocatorEngine.h
src/UI/: ActionListPanel.cpp  ActionListPanel.h  MainWindow.cpp  MainWindow.h  StatsPanel.cpp  StatsPanel.h  WebView2Widget.cpp  WebView2Widget.h
